--- a/package.xml
+++ b/package.xml
@@ -1,13 +1,13 @@
 <?xml version="1.0"?>
 <package format="2">
-  <name>intro_robotics_labs</name>
+  <name>hebi_robot</name>
   <version>0.0.0</version>
-  <description>The intro_robotics_labs package</description>
+  <description>The hebi_robot package</description>
 
   <!-- One maintainer tag required, multiple allowed, one person per tag -->
   <!-- Example:  -->
   <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
-  <maintainer email="mcamurri@todo.todo">mcamurri</maintainer>
+  <maintainer email="moska002@todo.todo">moska002</maintainer>
 
 
   <!-- One license tag required, multiple allowed, one license per tag -->
@@ -19,7 +19,7 @@
   <!-- Url tags are optional, but multiple are allowed, one per tag -->
   <!-- Optional attribute type can be: website, bugtracker, or repository -->
   <!-- Example: -->
-  <!-- <url type="website">http://wiki.ros.org/intro_robotics_labs</url> -->
+  <!-- <url type="website">http://wiki.ros.org/hebi_robot</url> -->
 
 
   <!-- Author tags are optional, multiple are allowed, one per tag -->
